language/move-lang/tests/move_check/naming/duplicate_acquires_list_item.exp
error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:4:23 ───
   │
 4 │     fun t0() acquires R, X, R {
   │                       - Previously listed here
   │                             ^ Duplicate acquires item
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:23 ───
   │
 8 │     fun t1() acquires R, X, R, R, R {
   │                       - Previously listed here
   │                             ^ Duplicate acquires item
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:29 ───
   │
 8 │     fun t1() acquires R, X, R, R, R {
   │                             - Previously listed here
   │                                ^ Duplicate acquires item
   │

error: 

   ┌── tests/move_check/naming/duplicate_acquires_list_item.move:8:32 ───
   │
 8 │     fun t1() acquires R, X, R, R, R {
   │                                - Previously listed here
   │                                   ^ Duplicate acquires item
   │

